<?xml version="1.0"?>
<package format="2">
  <name>robotiq_arg85_description</name>
  <version>0.0.1</version>
  <description>Robotiq ARG85 Gripper Description</description>
  <maintainer email="randerson@misorobotics.com">Rob Anderson</maintainer>
  <author email="ryan@rwsinnet.com">Ryan Sinnet</author>
  <license>BSD</license>
  <url type="repository">https://github.com/MisoRobotics/grillbot.git</url>
  <url type="website">https://github.com/MisoRobotics/grillbot/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>

  <export/>
</package>
